--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/c6c0360218.js" crossorigin="anonymous"></script>
+    <title>Intro to Code</title>
+    <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+      <div class="float">
+        <div class="me">
+        <h1>My name is Adetutu Idegbekwe, you can call me "Ade"</h1>
+        <h2>I am a Software Developer and a Visual Assistant <br>Specifically, I focus on graphic design, <br>data entry and email management</h2>
+        </div>
+        <div>
+        <img src="./WhatsApp Image 2024-06-03 at 09.38.49.jpeg" alt="female" id="pic1">
+      </div>
+    </div>
+            <div class="herp">
+              <caption><h1>About Me</h1></caption>
+        <table>
+            <table class="tab" >
+                <tr>
+                  <th>Name</th>
+                  <th>Age</th>
+                  <th>Hobbies</th>
+                </tr>
+                <tr>
+                  <td>Adetutu</td>
+                  <td>20yrs</td>
+                  <td style="padding-right: 100px;">Coding, learning and Singing</td>
+                </tr>
+              </table>
+        </table>
+    <br>
+    <div >
+      <hi>HerpTech</hi>
+      <p>Tel: 07379765160</p>
+      <p>Email: adetutuseliat@gmail.com</p>
+      <a href="adetutuseliat@gmail.com">Email</a>
+      <a href="https://github.com/Ade-ux123/code-training.github.io">GitHub account</a><br>
+      <a href="http://127.0.0.1:5500/code-training/grid_sample.html">Grid Sample</a><br>
+      <a href="http://127.0.0.1:5500/code-training/flexbox_sample.html">Flexbox Sample</a><br>
+      <a href="http://127.0.0.1:5500/code-training/formsuccess.html">formsuccess project</a><br>
+      <a href="http://127.0.0.1:5500/code-training/My%20Code%20Project.html">Bephzee Collections</a><br><br>
+    </div>
+  </div>
+      <div class="form">
+      <form action="./formSuccess.html"></form>
+      <label for="fname">First name:</label><br>
+      <input type="text" id="fname" name="fname" value=""><br>
+      <label for="lname">Last name:</label><br>
+      <input type="text" id="lname" name="lname" value=""><br>
+      <label for="Email">Email address:</label><br>
+      <input type="text" id="Email" name="Email" value=""><br>
+      <label for="Comment">How Do We Help</label><br>
+      <input text id="Comment" name="Comment" value=""><br><br>
+      <input style="width: 20px; height: 40px; background: green; color: white;" type="Send" value= "Send">
+    </div>
+    </div>
+    
 
+    </body>
+</html>
